css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Rubik:wght@300&display=swap');

body {
    background: linear-gradient(to top right, #000099 0%, #00ffcc 100%);
}

body img {
    width: 100%;
    height:auto;
}

.header-resume header, p {
    text-align: center;
}

.hedaer-resume p {
    font-family: Rubik, "Times New Roman";
    font-size: 16px;
    font-weight: bold;
}

header {
    font-family: Rubik, "Times New Roman";
    font-size: 30px;
    text-align: left;
    text-decoration: underline;
}

li {
    font-family: Rubik, "Times New Roman";
    font-size: 16px;
    font-weight: bold;
    text-align: left;
}

.navbar-container ul {
    list-style: none;
    background: white;
    padding: 0;
    margin: 0;
    opacity: 80%;
    text-align: center;
}   

.navbar-container li{
    display: inline-block;
}

.navbar-container a {
    text-decoration: none;
    color: black;
    display: block;
    padding: 25px 20px;
    font-size: 30px;
    text-transform: uppercase;
    font-weight: bold;
    text-align: center;
}

.navbar-container a:hover{
    background: #4ddbff;
}

/*resume webpage*/

.baby-sitting img {
    text-align: center;
    width: 30%;   
    padding-left: 650px;
}

.computer img {
    text-align: center; 
    width: 30%;
    padding-left: 650px;
}

.awards img {
    text-align: center; 
    width: 10%;
    padding-left: 850px;
}

/*pakistan webpage*/
.karachi header{
    padding-top: 100px;
    text-decoration: none;
}

.karachi img {
    width: 40%;
    padding-left: 600px;
}

.people header {
    text-decoration: none;
}

.people img {
    width: 40%;
    padding-left: 600px;
}

.cricket header {
    text-decoration: none;
}

.cricket img {
    width: 40%;
    padding-left: 600px;
}

.rupee header {
    text-decoration: none;
}

.rupee img {
    width: 40%;
    padding-left: 600px;
}
/*virtual machines webpage*/
.os header{
    text-decoration: none;
    padding-top: 10px;
    padding-bottom: -40px;
}

.os img {
    width: 40%;
    padding-left: 600px;
}

.vm header{
    text-decoration: none;
}

.vm img {
    width: 40%;
    padding-left: 600px;
}

.virus header{
    text-decoration: none;
}

.virus img {
    width: 40%;
    padding-left: 600px;
}


.yt  {
    text-align: center;
}

